--- a/Receiver/Receiver.vcxproj
+++ b/Receiver/Receiver.vcxproj
@@ -18,6 +18,14 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="receiver.c" />
+    <ClCompile Include="receiver_functions.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="HardCodedData.h" />
+    <ClInclude Include="receiver_functions.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -114,7 +122,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);HAMMING</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -138,14 +146,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\..\Users\t-yuvalnaor\Downloads\Pa1-master\Pa1-master\Reciever\Reciever\receiver.c" />
-    <ClCompile Include="..\..\..\Users\t-yuvalnaor\Downloads\Pa1-master\Pa1-master\Reciever\Reciever\receiver_functions.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\..\Users\t-yuvalnaor\Downloads\Pa1-master\Pa1-master\Reciever\Reciever\HardCodedData.h" />
-    <ClInclude Include="..\..\..\Users\t-yuvalnaor\Downloads\Pa1-master\Pa1-master\Reciever\Reciever\receiver_functions.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
